# testinfra-echo

./: README.rst  setup.cfg  test_testinfra_<foo>.py  test_testinfra_echo.py
testinfra_<foo>/: plugin.py
testinfra_echo/: plugin.py
