[metadata]
name = testinfra-echo
author = Philippe Pepiot
author-email = phil@philpep.org
summary = Simple echo wrapper for testinfra
home-page = http://github.com/philpep/testinfra-echo
description-file = README.rst
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration

[files]
packages =
    testinfra_echo

[entry_points]
pytest11 =
    pytest11.testinfra_echo = testinfra_echo.plugin
