[metadata]
name = testinfra-<foo>
author = Duncan Hutty
author-email = dhutty@cisco.com
summary = Simple <foo> module for testinfra
home-page = http://github.com/dhutty/testinfra-<foo>
description-file = README.rst
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration

[files]
packages =
    testinfra_<foo>

[entry_points]
pytest11 =
    pytest11.testinfra_<foo> = testinfra_<foo>.plugin
